syntax = "proto3";

package MS_Test.proto;

message Freezbee {
  int32 idModele = 1;
  string nameModele = 2;
  string gammeModele = 3;
}